<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".amount.AmountFragment">

    <ImageView android:src="@drawable/mercado_pago"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/imageView2"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="92dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText android:id="@+id/amount_value"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_margin="40dp"
              android:inputType="numberDecimal"
              android:gravity="center"
              android:background="@drawable/shape_custom_edittext"
              android:hint="@string/value_massage"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp"
              app:layout_constraintHorizontal_bias="1.0"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_blue"
            android:text="Next"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/amount_value"/>
</android.support.constraint.ConstraintLayout>